425 - QStringUnicode 012 Done. The implementation does not match the design since the design was wrong, it was not technically possible to do what was written in the document. Added the SetChar method.

--- a/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
@@ -109,6 +109,7 @@
     <File Name="../../../../source/SQFloat.cpp"/>
     <File Name="../../../../source/SQInteger.cpp"/>
     <File Name="../../../../source/SQVF32.cpp"/>
+    <File Name="../../../../source/QCharIterator.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Memory">
     <File Name="../../../../headers/AllocationOperators.h"/>
