--- a/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj.filters
@@ -106,5 +106,8 @@
     <ClCompile Include="..\..\..\..\source\QType.cpp">
       <Filter>DataTypes</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\source\QCharIterator.cpp">
+      <Filter>DataTypes</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
