--- a/trunk/testing/projects/VS2010/QEUnitTests/Common/Common.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/Common/Common.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QDelegate_Test.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QCharIterator_Test.cpp">
+      <Filter>Tests\DataTypes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\testsystem\CommonConfigDefinitions.h">
