--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
@@ -6,7 +6,7 @@
 		<Option execution_dir="/home/mar/Proyectos/C++/QuimeraEngine/projects/CodeBlocks10/QuimeraEngine/" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="DataTypes/;Memory/;" />
+		<Option virtualFolders="DataTypes\;Memory\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -201,6 +201,9 @@
 		</Unit>
 		<Unit filename="../../../../source/QAlignment.cpp">
 			<Option virtualFolder="Memory/" />
+		</Unit>
+		<Unit filename="../../../../source/QCharIterator.cpp">
+			<Option virtualFolder="DataTypes/" />
 		</Unit>
 		<Unit filename="../../../../source/QCharUnicode.cpp">
 			<Option virtualFolder="DataTypes/" />
