478 - QListIterator Done. Added the suppression of the warning 4297 on MSVC.

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -316,6 +316,9 @@
 		<Unit filename="../../../../tests/unit/testmodule_tools/QLineSegment_Test.cpp">
 			<Option virtualFolder="Tests/Math/" />
 		</Unit>
+		<Unit filename="../../../../tests/unit/testmodule_tools/QListIterator_Test.cpp">
+			<Option virtualFolder="Tests/Containers/" />
+		</Unit>
 		<Unit filename="../../../../tests/unit/testmodule_tools/QListWhiteBox.h">
 			<Option virtualFolder="Tests/Containers/" />
 		</Unit>
