The documentation and the implementation of some methods of QFixedArray have been improved. The Reserve method of ONTree has been fixed. QNTree has been added to the CodeLite projects, as it should have been already.

--- a/trunk/projects/CodeLite/QuimeraEngine/Tools/Tools.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Tools/Tools.project
@@ -191,6 +191,7 @@
     <File Name="../../../../headers/QList.h"/>
     <File Name="../../../../source/EQIterationDirection.cpp"/>
     <File Name="../../../../source/EQTreeTraversalOrder.cpp"/>
+    <File Name="../../../../headers/QNTree.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Time">
     <File Name="../../../../headers/QDateTime.h"/>
