--- a/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
@@ -86,6 +86,8 @@
       <File Name="../../../../tests/unit/testmodule_tools/QList_Test.cpp" ExcludeProjConfig=""/>
       <File Name="../../../../tests/unit/testmodule_tools/QListWhiteBox.h" ExcludeProjConfig=""/>
       <File Name="../../../../tests/unit/testmodule_tools/QListIterator_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_tools/QNTree_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_tools/QNTreeWhiteBox.h"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Time">
       <File Name="../../../../tests/unit/testmodule_tools/QDateTime_Test.cpp" ExcludeProjConfig=""/>
