--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="..\..\..\..\headers\QComparatorDefault.h" />
     <ClInclude Include="..\..\..\..\headers\QDateTime.h" />
     <ClInclude Include="..\..\..\..\headers\QDualQuaternion.h" />
+    <ClInclude Include="..\..\..\..\headers\QDynamicArray.h" />
     <ClInclude Include="..\..\..\..\headers\QFixedArray.h" />
     <ClInclude Include="..\..\..\..\headers\QHexahedron.h" />
     <ClInclude Include="..\..\..\..\headers\QLineSegment.h" />
